# dobby-benchmark-script

./: .gitignore  README.md  pyproject.toml  script.py
results/: benchmark_results.csv  result_01_memory_experiment_base.csv  result_01_memory_experiment_quantized.csv  result_01_novaAnimeXL_base.csv  result_01_novaAnimeXL_dobby_model.csv  result_01_speed_experiment_base.csv  result_01_speed_experiment_dobby_model.csv  result_02_memory_experiment_base.csv  result_02_memory_experiment_quantized.csv  result_02_novaAnimeXL_base.csv  result_02_novaAnimeXL_dobby_model.csv  result_02_speed_experiment_base.csv  result_02_speed_experiment_dobby_model.csv  result_03_memory_experiment_base.csv  result_03_memory_experiment_quantized.csv  result_03_novaAnimeXL_base.csv  result_03_novaAnimeXL_dobby_model.csv  result_03_speed_experiment_base.csv  result_03_speed_experiment_dobby_model.csv  result_04_memory_experiment_base.csv  result_04_memory_experiment_quantized.csv  result_04_novaAnimeXL_base.csv  result_04_novaAnimeXL_dobby_model.csv  result_04_speed_experiment_base.csv  result_04_speed_experiment_dobby_model.csv  result_05_memory_experiment_base.csv  result_05_memory_experiment_quantized.csv  result_05_novaAnimeXL_base.csv  result_05_novaAnimeXL_dobby_model.csv  result_05_speed_experiment_base.csv  result_05_speed_experiment_dobby_model.csv  result_06_memory_experiment_base.csv  result_06_memory_experiment_quantized.csv  result_06_novaAnimeXL_base.csv  result_06_novaAnimeXL_dobby_model.csv  result_06_speed_experiment_base.csv  result_06_speed_experiment_dobby_model.csv  (+24 more)
(+13 files in other folders)
