[project]
name = "dobby-benchmark-script"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.15"
dependencies = [
    "torch==2.2.1",
    "torchao",
    "diffusers==0.26.3",
    "pandas",
    "matplotlib",
    "transformers==4.38.2",
    "accelerate",
    "Pillow",
    "huggingface-hub==0.25.2",
    "numpy==1.26.4",
    "mixdq-extension==0.6",
]


[tool.uv.sources]
torch = { index = "pytorch-cu121" }
torchvision = { index = "pytorch-cu121" }
torchaudio = { index = "pytorch-cu121" }
xformers = { index = "pytorch-cu121" }
torchao = { index = "pytorch-cu121" }

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
